# sesame_navigation

./: CMakeLists.txt  package.xml  setup.py
launch/: lab_junlin_experiment.launch  sprayer_only.launch  sprayer_tracker.launch  spraying_scenario_1_drone.launch  test_markers_4_junlin.launch  vision_tfs_2_drones.launch
launch/includes/planners/: follower_planner.launch  sprayer_planner.launch  sprayer_planner_d1.launch  sprayer_planner_d2.launch  viz_trajectories.launch
launch/includes/rtk_test/: nsf2nmea.launch  ntrip.launch
launch/includes/switches/: safety_switch.launch
launch/includes/tfs/: tf_map.launch  tf_uav_1.launch  tf_uav_2.launch
launch/includes/vision/: detect_drones_uav_1.launch  detect_drones_uav_2.launch  detect_obstacle_uav_1.launch  detect_obstacle_uav_2.launch  drone_manager.launch  obstacle_manager.launch
msg/: PointIdArray.msg
src/: detect_drones.py  detect_obstacles.py  drone_manager.py  follower_uav_planner.py  gps_command_node.py  navsatfix_to_nmea.py  obstacle_manager.py  relay_topic_with_switch.py  safety_pose_switch.py  sprayer_uav_planner.py  take_off_and_roam.py  take_off_and_stay.py  tf_broadcaster_map.py  tf_broadcaster_odom.py
